Finished the unit tests.